examples/bad/unknown_identifier3.latf
int fun(int x) {
    return x + 1;
}

int main() {
    fun(y); // error - unknown identifier

    return 0;
}